corrige o metodo de bater ponto e adiciona api de localização
